[package]
name = "verder-helpen-core"
version = "0.1.0"
authors = ["Marlon Baeten <marlon@tweedegolf.com>"]
edition = "2018"
resolver = "2"

[dependencies]
verder-helpen-sentry = { git = "https://github.com/verder-helpen/verder-helpen-sentry.git", optional = true }
verder-helpen-jwt = { git = "https://github.com/verder-helpen/verder-helpen-jwt.git" }
verder-helpen-proto = { git = "https://github.com/verder-helpen/verder-helpen-proto.git" }
josekit = "0.8.2"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.19"
urlencoding = "2.1.2"

[dev-dependencies]
figment = { version = "0.10.8", features = ["env", "toml", "json"] }
httpmock = "0.6.7"
tokio-test = "0.4.2"

[dev-dependencies.verder-helpen-comm-common]
git = "https://github.com/verder-helpen/comm-common.git"
rev = "694e0e37d8491701b923d579409dcf7025bbcf76"
features = ["auth_during_comm"]

[features]
sentry = ["dep:verder-helpen-sentry"]
