[package]
name = "verder-helpen-core"
version = "0.1.0"
authors = ["Marlon Baeten <marlon@tweedegolf.com>"]
edition = "2018"
resolver = "2"

[dependencies]
verder-helpen-sentry = { git = "https://github.com/verder-helpen/verder-helpen-sentry.git", optional = true }
verder-helpen-jwt = { git = "https://github.com/verder-helpen/verder-helpen-jwt.git" }
verder-helpen-proto = { git = "https://github.com/verder-helpen/verder-helpen-proto.git" }
josekit = "0.8.4"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
figment = { version = "0.10.12", features = ["env", "toml", "json"] }
httpmock = "0.6.8"
tokio-test = "0.4.3"

[dev-dependencies.verder-helpen-comm-common]
git = "https://github.com/verder-helpen/comm-common.git"
rev = "29a7c83cc3a3856c0da67f75f48ef5becb77af12"
features = ["auth_during_comm"]

[features]
sentry = ["dep:verder-helpen-sentry"]
